Fix some warning in Stargate parallel
(cherry picked from commit b093695df88d2a9bf91cf945cdadd98485492a09)